Added new changes
Signed-off-by: Abhijeet Kandalkar <kandalkar.abhijeet58@gmail.com>

--- a/style.css
+++ b/style.css
@@ -330,6 +330,7 @@ footer {
 
 code {
   font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
+  background: #F4F5F5;
 }
 
 .highlight .c {
